# Solfege

./: .gitignore  Makefile.in  README.md  acinclude.m4  autogen.sh  changelog  changelog-2  config.h.in  configure.ac  conv-all.sh  default.config  finn  help-menu.xml  installer.nsi.in  lessonfile_editor.1.txt  lessonfile_editor.py  make-win32-bindir.sh  mychecker  mygi-convert.sh  mygi-postconvert.sh  mylint  pygi-convert.sh  run-solfege.py.in  runsrcdir.bat  solfege.1.txt  solfege.css  solfege.desktop  solfege.py  solfege.xml  solfegedebug.bat  system.rc  test.py  testgtkenv.bat  testgtkenv.py  ui.xml  win32-start-solfege.pyw  winbuild.sh  windowsinstaller.iss.in
autopackage/: default.apspec.in
exercises/: Makefile
exercises/standard/: Makefile  debugtree.txt  learningtree.txt  learningtree1.txt
exercises/standard/lesson-files/: Makefile  altered-1  altered-2  barnesanger  besifring  bpm  chord-7-inv  chord-7b9-maj79  chord-all-root  chord-dim-aug  chord-dim-aug-min-major  chord-m7-7  chord-m7-7-inv  chord-m7-7-maj7-m7b5-dim7  chord-m9-9  chord-m9-9-7b9-maj79  chord-maj7-m7b5-dim7  chord-min-major  chord-min-major-7  chord-min-major-close-open  chord-min-major-inv  chord-voicing-test  compare-intervals  compare-intervals-harmonic-2  compare-intervals-harmonic-4-5  compare-intervals-harmonic-4-5-8  compare-intervals-harmonic-6  compare-intervals-harmonic-7  compare-intervals-harmonic-9  compare-intervals-melodic  compare-intervals-melodic-10  compare-intervals-melodic-2  compare-intervals-melodic-2-to-8  compare-intervals-melodic-3~  compare-intervals-melodic-4-5  compare-intervals-melodic-4-5-8  compare-intervals-melodic-4-5~  compare-intervals-melodic-7  compare-intervals-melodic-7-9  diatonic-1  (+250 more)
exercises/standard/lib/: jazz_progressions  progression_elements
exercises/standard/regression-lesson-files/: Makefile  chord-no-name  chord-wav-music  chordvoicing-lessonfile-exception  chordvoicing-mpd-exception  compareintervals-1  compareintervals-2  compareintervals-3  compareintervals-4  dictation-exception-handling  dictation-no-questions  elembuilder-bad-tonic  elembuilder-scale-1  (+35 more)
feta/: Makefile
graphics/: Makefile  solfege.xpm
help/: Makefile  README  style.css
help/C/: Makefile  about-statistics.xml  bug-reporting.xml  dictation.xml  ear-training-test-printout-editor.xml  elembuilder-harmonic-progressions.xml  gpl.xml  harmonicinterval.xml  idbyname-cadences.xml  idbyname-chords.xml  idbyname-intonation.xml  idbyname.xml  identifybpm.xml  idproperty.xml  idtone.xml  interval-config-help.xml  lessonfiles.xml  melodicinterval.xml  midi-instrument-names.xml  music-theory.xml  nameinterval.xml  online-resources.xml  preferences-window.xml  profile-manager.xml  rhythm.xml  rhythmtapping2.xml  scales.xml  selecting-exercises.xml  singchord.xml  singinterval.xml  solfege.xml.in  tone-in-context.xml  trainingset-editor.xml  twelvetone.xml
help/de/: de.po
help/eo/: eo.po
help/es/: es.po
help/et/: et.po
help/fr/: fr.po
help/gl/: gl.po
help/nb/: nb.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/tr/: tr.po
po/: Makefile  cs.po  da.po  de.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  gl.po  hu.po  it.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  vi.po  zh_CN.po
solfege/: Makefile  _version.py  abstract.py  abstract_solmisation_addon.py  application.py  buildinfo.py  buildinfo.py.in  cfg.py  configwindow.py  const.py  dataparser.py  download_pyalsa.py  esel.py  filesystem.py  fpeditor.py  frontpage.py  gu.py  history.py  i18n.py  inputwidgets.py  instrumentselector.py  languages.py  lessonfile.py  lessonfile_editor_main.py  lessonfilegui.py  lfmod.py  mainwin.py  mainwin2.py  make_screenshots.py  multipleintervalconfigwidget.py  notenamespinbutton.py  optionparser.py  osutils.py  parsetree.py  practisesheetdlg.py  presetup.py  profilemanager.py  reportbug.py  reportlib.py  runtime.py  (+13 more)
solfege/exercises/: __init__.py  chord.py  chordvoicing.py  compareintervals.py  dictation.py  elembuilder.py  harmonicinterval.py  harmonicprogressiondictation.py  idbyname.py  identifybpm.py  idproperty.py  idtone.py  melodicinterval.py  nameinterval.py  rhythm.py  rhythmdictation.py  rhythmdictation2.py  rhythmtapping.py  rhythmtapping2.py  singanswer.py  singchord.py  singinterval.py  solmisation.py  toneincontext.py  tuner.py  twelvetone.py
solfege/mpd/: Makefile  __init__.py  _exceptions.py  const.py  duration.py  elems.py  engravers.py  interval.py  lexer.py  mfutils.py  mpdutils.py  musicalpitch.py  musicdisplayer.py  parser.py  performer.py  rat.py  requests.py  rhythmwidget.py  track.py
solfege/soundcard/: Makefile  __init__.py  alsa_sequencer.py  calc.c  calc.h  dsp.c  dsp.h  exporter.py  fakesynth.py  fft.c  fft.h  gate.c  gate.h  macro_to_function.c  macro_to_function.h  midifilesynth.py  oss_common.py  oss_sequencer.py  oss_sequencer2.py  solfege_c_midi.c  solfege_c_midi.i  soundcardexceptions.py  synth_common.py  winmidi.c  winmidi.def  winmidi.dsp  winmidi.dsw  winsynth.py  xmalloc.c  xmalloc.h
solfege/tests/: __init__.py  test-lf  test_cfg.py  test_dataparser.py  test_learningtree.py  test_lessonfile.py  test_lfmod.py  test_reportlib.py  test_sourcecode.py  test_statistics.py  test_utils.py
test/: Makefile  README  mpd-test.py  seq.c  seq.py  soundbug.py  soundcard-test.py
tools/: Makefile  buildutil.py  create_depgraph.py  depgraph2dot.py  eartrainingtest.dtd  find_prefixed_strings.py  fix_eps.py  fix_feta.py  gen_regression_lessonfiles.py  gen_rhythms_table.py  gendepgraph.sh  generate_lessonfiles.py  generate_theory_ly.py  get-gtk-files.py  hash-of-file.py  lf2lb.py  make-0install-tgz.sh  make-release.py  missing-screenshots.py  mk-classhier-graph.py  mypydoc.py  po-file-checks.py  screenshot.py  test-revision-id.py  trim_win32_installer.py  update-0install-xml.sh  update-copyright.py
topdocs/: AUTHORS.texi  FAQ.texi  INSTALL.texi  INSTALL.win32.texi  Makefile  README.texi  defs.texi.in
(+122 files in other folders)
